--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,23 @@ services:
     command: --update --create-table --host=master --user=root --password=123456 --database=percona --interval=0.25 --check-read-only --no-version-check
     depends_on:
     - master
+  freno-mysql:
+    image: mysql:5.7
+    environment:
+    - MYSQL_ROOT_PASSWORD=123456
+  freno:
+    build:
+      context: .
+      dockerfile: Dockerfile.freno
+    command: '--config /etc/freno.json --debug --http'
+    volumes:
+    - ./freno.json:/etc/freno.json:ro
+    expose:
+    - 8111
+    ports:
+    - 8111:8111
+    depends_on:
+    - freno-mysql
   proxysql:
     image: proxysql/proxysql:2.0.12
     command: --no-version-check --reload
