--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     command: --update --create-table --host=master --user=root --password=123456 --database=percona --interval=0.25 --check-read-only --no-version-check
     depends_on:
     - master
-  freno-mysql:
+  freno-db:
     image: mysql:5.7
     environment:
     - MYSQL_ROOT_PASSWORD=123456
@@ -30,14 +30,14 @@ services:
       context: .
       dockerfile: Dockerfile.freno
     command: '--config /etc/freno.json --debug --http'
-    volumes:
-    - ./freno.json:/etc/freno.json:ro
     expose:
     - 8111
     ports:
     - 8111:8111
+    volumes:
+    - ./freno.json:/etc/freno.json:ro
     depends_on:
-    - freno-mysql
+    - freno-db
   proxysql:
     image: proxysql/proxysql:2.0.12
     command: --no-version-check --reload
