--- a/Dockerfile.freno
+++ b/Dockerfile.freno
@@ -7,5 +7,8 @@ RUN go build -o freno cmd/freno/main.go
 
 FROM debian:stretch
 
+RUN mkdir -p /var/lib/freno && chown -R nobody /var/lib/freno
 COPY --from=0 /go/src/github.com/github/freno/freno /usr/local/bin/freno
+
+USER nobody
 ENTRYPOINT ["freno"]
