--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,12 +15,24 @@ services:
     command: --gtid-mode=ON --enforce-gtid-consistency=ON --server-id=3 --log-bin=mysql-bin --log-slave-updates --relay-log=relay-bin --read-only=ON
     environment:
     - MYSQL_ROOT_PASSWORD=123456
+  init:
+    image: mysql:5.7
+    entrypoint: bash
+    command: '/init.sh'
+    volumes:
+    - ./init.sh:/init.sh:ro
+    - ./sql:/sql:ro
+    depends_on:
+    - master
+    - replica1
+    - replica2
   pt-heartbeat:
     image: yuuki0xff/percona-toolkit:latest
     entrypoint: pt-heartbeat
     command: --update --create-table --host=master --user=root --password=123456 --database=percona --interval=0.25 --check-read-only --no-version-check
+    restart: always
     depends_on:
-    - master
+    - init
   freno:
     build:
       context: .
@@ -32,6 +44,8 @@ services:
     - 8111:8111
     volumes:
     - ./etc/freno.json:/etc/freno.json:ro
+    depends_on:
+    - init
   proxysql:
     image: proxysql/proxysql:2.0.12
     command: --no-version-check --reload
@@ -41,6 +55,4 @@ services:
     - 3306
     - 6032
     depends_on:
-    - master
-    - replica1
-    - replica2
+    - init
