--- a/Dockerfile.freno
+++ b/Dockerfile.freno
@@ -1,11 +1,11 @@
-FROM golang:1.14-stretch
+FROM golang:1.14-alpine
 
 COPY freno /go/src/github.com/github/freno
 WORKDIR /go/src/github.com/github/freno
 
-RUN go build -o freno cmd/freno/main.go
+RUN go build -ldflags '-w -s' -o freno cmd/freno/main.go
 
-FROM debian:stretch
+FROM alpine
 
 COPY --from=0 /go/src/github.com/github/freno/freno /usr/local/bin/freno
 
