Add proxysql user for Freno

--- a/etc/proxysql.cnf
+++ b/etc/proxysql.cnf
@@ -2,7 +2,7 @@ datadir="/var/lib/proxysql"
 
 admin_variables=
 {
-    admin_credentials="admin:admin;root:123456"
+    admin_credentials="admin:admin;root:123456;freno:fr3n0"
     mysql_ifaces="0.0.0.0:6032"
 }
 
