--- a/etc/proxysql.cnf
+++ b/etc/proxysql.cnf
@@ -32,7 +32,7 @@ mysql_variables=
 mysql_servers=
 (
   {
-    address="master"
+    address="primary"
     port=3306
     hostgroup=10
     max_connections=100
@@ -65,7 +65,7 @@ mysql_replication_hostgroups=
   {
     writer_hostgroup=10
     reader_hostgroup=20
-    comment="local"
+    comment="testbed"
   }
 )
 
