Update freno and test container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,3 +69,9 @@ services:
     - ./etc/freno.conf.json:/etc/freno.conf.json:ro
     depends_on:
     - proxysql
+  test:
+    build:
+      context: .
+    depends_on:
+    - freno
+    - proxysql
