Enable profiling, update freno

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,7 @@ services:
   freno:
     build:
       context: ./freno
-    command: '--debug --http'
+    command: '--debug --http --enable-profiling'
     expose:
     - 8111
     ports:
